ETSL-935 Go Chat alignment fixes

--- a/ui.frontend/src/main/webpack/gochat/styles/components/footer.scss
+++ b/ui.frontend/src/main/webpack/gochat/styles/components/footer.scss
@@ -2,14 +2,18 @@
   // padding: toRem(128) 0 0;
 
   @include respond-to-max($desktop) {
-    padding-left: toRem(24);
-    padding-right: toRem(24);
+    padding-left: toRem(60);
+    padding-right: toRem(60);
   }
 
   @include respond-to-max($tablet) {
-    padding-left: toRem(15);
-    padding-right: toRem(15);
+    padding-left: toRem(32);
+    padding-right: toRem(32);
     padding-top: 0;
+  }
+
+  @include respond-to-min($desktop-wide) {
+    padding: 0 toRem(95);
   }
 
   > .cmp-container {
